--- a/css/estilos.css
+++ b/css/estilos.css
@@ -417,18 +417,32 @@ body{
 	height: 550px;
 	background: url(../img/tiraAnimacion.png);
 	background-position: left top;
-	animation: animarBici steps(6) 1s infinite;
+	animation: animarBici steps(6) 4s infinite;
+	transition-duration: 5s;
 }
 @keyframes animarBici{
+	0%{
+		transform: rotateY( 0deg );
+	}
+	49%{
+		transform: rotateY( 0deg );
+	}
+	50%{
+		background-position: -1300px top;
+		margin-left: 70%;
+		transform: rotateY( 180deg );
+	}
+	99%{
+		transform: rotateY( 180deg );
+	}
+
 	100%{
 		background-position: -1300px top;
+		margin-left: 0%;
+		transform: rotateY( 0deg );
+		
 	}
 	
-	60%{
-		margin-left: 70%;
-		animation-direction: alternate;
-		/*animation-duration: 3s;*/
-	}
 
 }
 
@@ -509,7 +523,86 @@ body{
 	width: 100%; 
    height:100vh;  
 }
-
+.pausar{
+	background-image:url(..//img/pausar.png);
+ 	background-repeat:no-repeat;
+  	height:100px;
+  	width:100px;
+  	background-position:center;
+  	position: absolute;
+  	left: 80px;
+  	z-index: 999;
+}
+.continuar{
+	background-image:url(..//img/play2.png);
+ 	background-repeat:no-repeat;
+  	height:100px;
+  	width:100px;
+  	background-position:center;
+  	position: absolute;
+  	left:145px;
+  	z-index: 999;
+}
+.pausar_dos{
+	background-image:url(..//img/pausar.png);
+ 	background-repeat:no-repeat;
+  	height:100px;
+  	width:100px;
+  	background-position:center;
+  	position: absolute;
+  	left: 80px;
+  	z-index: 999;
+}
+.continuar_dos{
+	background-image:url(..//img/play2.png);
+ 	background-repeat:no-repeat;
+  	height:100px;
+  	width:100px;
+  	background-position:center;
+  	position: absolute;
+  	left:145px;
+  	z-index: 999;
+}
+.pausar_tres{
+	background-image:url(..//img/pausar.png);
+ 	background-repeat:no-repeat;
+  	height:100px;
+  	width:100px;
+  	background-position:center;
+  	position: absolute;
+  	left: 80px;
+  	z-index: 999;
+}
+.continuar_tres{
+	background-image:url(..//img/play2.png);
+ 	background-repeat:no-repeat;
+  	height:100px;
+  	width:100px;
+  	background-position:center;
+  	position: absolute;
+  	left:145px;
+  	z-index: 999;
+}
+.pausar_cuatro{
+	background-image:url(..//img/pausar.png);
+ 	background-repeat:no-repeat;
+  	height:100px;
+  	width:100px;
+  	background-position:center;
+  	position: absolute;
+  	left: 80px;
+  	z-index: 999;
+}
+.continuar_cuatro{
+	background-image:url(..//img/play2.png);
+ 	background-repeat:no-repeat;
+  	height:100px;
+  	width:100px;
+  	background-position:center;
+  	position: absolute;
+  	left:145px;
+  	z-index: 999;
+}
 .videoModal{
 	height: 430px;
 	width: 100%;
